fix side panel button z-index

--- a/components/SidePanel.module.css
+++ b/components/SidePanel.module.css
@@ -39,6 +39,7 @@
 
 .backButton {
   position: absolute;
+  z-index: 3;
   width: 50px;
   height: 50px;
   bottom: var(--bsu-md);
@@ -65,7 +66,7 @@
 .panelLoader {
   position: absolute;
   background: var(--white);
-  z-index: 3;
+  z-index: 4;
   opacity: 0.4;
 
   .spinner {
